2008-05-20  Behdad Esfahbod  <behdad@gnome.org>

	Bug 501651 – Update glib/libcharset

	* configure.in:
	* glib/libcharset/Makefile.am:
	* glib/libcharset/README:
	* glib/libcharset/codeset.m4:
	* glib/libcharset/config.charset:
	* glib/libcharset/glibc21.m4:
	* glib/libcharset/libcharset-glib.patch:
	* glib/libcharset/libcharset.h:
	* glib/libcharset/localcharset.c (_g_locale_get_charset_aliases),
	(_g_locale_charset_raw):
	* glib/libcharset/localcharset.h:
	* glib/libcharset/make-patch.sh:
	* glib/libcharset/ref-add.sin:
	* glib/libcharset/ref-del.sin:
	* glib/libcharset/update.sh:
	Update libcharset to the one shipped with libiconv-0.12.

2008-05-20  Behdad Esfahbod  <behdad@gnome.org>

	Bug 459905 – Bug in wcwidth data
	Bug 534085 – g_unichar_iswide_cjk() has a totally wrong table
	* glib/guniprop.c (g_unichar_iswide), (g_unichar_iswide_cjk):
	Regenrate wide and wide_cjk tables from Unicode 5.1.0 data directly.
	Not using Markus Kuhn's tables anymore.

2008-05-20 14:31:18  Tim Janik  <timj@imendio.com>

	* reverted recent unapproved changes by Yair Hershkovitz, regarding:
	Bug 503071 – Application direction changes to right to left even if theres no translation.

2008-05-20  Tor Lillqvist  <tml@novell.com>

	* configure.in: Don't need memory barriers when using a non-gcc
	compiler on Windows either.

2008-05-19  Tor Lillqvist  <tml@novell.com>

	* glib/gdir.c: Include the dirent.h and wdirent.c from
	../build/win32/dirent directly here when compiling with MSVC and
	without HAVE_DIRENT_H.

2008-05-19  Hans Breuer  <hans@breuer.org>

	* glib/makefile.msc : added gi18n.c

2008-05-19  Tor Lillqvist  <tml@novell.com>

	* glib/Makefile.am: #define HELPER_CONSOLE in
	gspawn-win32-helper-console.c

	* glib/gspawn-win32-helper.c: Compile a main() instead of
	WinMain() if HELPER_CONSOLE is defined. MSVC insists on a console
	application having a main().

2008-05-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 527214 – g_timer_elapsed() returns random values.
